# multiAgentTrader

./: .dockerignore  .env.ec2.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  PRODUCT.md  README.md  agenttasks.md.txt  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tmp_multiagenttrader-alt.conf
.design-sync/: config.json
agents/: base_http_agent.py
agents/event-analysis/: Dockerfile  server.py
agents/execution/: Dockerfile
agents/market-data/: Dockerfile  server.py
agents/post-trade-review/: Dockerfile
agents/risk/: Dockerfile  server.py
agents/strategy-research/: Dockerfile  server.py
aitraders/: __init__.py  journal.py  review_cli.py  schemas.py
aitraders/agents/: __init__.py  backtesting.py  event_analysis.py  market_data.py  post_trade_review.py  risk.py  strategy_research.py
apps/api/: Dockerfile  package.json  tsconfig.json
apps/futures-worker/: Dockerfile  README.md  (+1 more)
deploy/: nginx-multiagenttrader-alt.conf
docs/: AI_UI_DEVELOPMENT_BRIEF.md  credits_agent_runs_implementation.md  crypto-dependency-research.md  ec2-deploy.md  market-dependency-research.md  phase1_plan.md  platform_architecture.md
infra/: Caddyfile  postgres-init.sql
scripts/: start-services.sh  stop-services.sh
tests/: test_event_analysis_agent.py  test_futures_options_agents.py  test_journal.py  test_market_data_agent.py  test_post_trade_review.py  test_risk_agent.py  test_strategy_research_agent.py
tmp/: alpha_vantage_tools.json
tutorial-videos/: dashboard-overview.webm  decision-support.webm
(+123 files in other folders)
